--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@
   /* Grey */
   --theme-color: #95a5a6;
   --theme-color-hover: #7f8c8d;
+  --theme-color-low-opacity: rgba(149, 165, 166, 0.8);
 }
 
 ::-webkit-scrollbar {
@@ -100,6 +101,20 @@ i {
 ==================================
 
 */
+
+.btn {
+  text-transform: uppercase;
+  display: block;
+  width: auto;
+  margin: auto;
+  background-color: var(--theme-color);
+  border: 1px solid var(--theme-color);
+}
+
+.btn:hover {
+  background-color: var(--theme-color-hover);
+  box-shadow: 10px 10px 20px #ccc;
+}
 
 .form-error {
   color: var(--bs-red);
@@ -207,20 +222,6 @@ i {
 
 #login .tab-header {
   grid-template-columns: repeat(2, 1fr);
-}
-
-#login .btn {
-  text-transform: uppercase;
-  display: block;
-  width: auto;
-  margin: auto;
-  background-color: var(--theme-color);
-  border: 1px solid var(--theme-color);
-}
-
-#login .btn:hover {
-  background-color: var(--theme-color-hover);
-  box-shadow: 10px 10px 20px #ccc;
 }
 
 #login label {
@@ -455,4 +456,93 @@ footer {
   padding: 1rem;
   text-align: center;
   color: #666;
+}
+
+/*
+
+==================================
+==================================
+    profile.html
+==================================
+==================================
+
+*/
+
+/* Profile Photo */
+
+.profile-pic {
+  color: transparent;
+  transition: all 0.3s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  transition: all 0.3s ease;
+}
+
+.profile-pic input {
+  display: none;
+}
+
+.profile-pic img {
+  position: absolute;
+  object-fit: cover;
+  width: 200px;
+  height: 200px;
+  box-shadow: 0 0 10px 0 var(--theme-color);
+  border-radius: 100px;
+  z-index: 0;
+}
+
+.profile-pic .-label {
+  cursor: pointer;
+  height: 200px;
+  width: 200px;
+}
+
+.profile-pic:hover .-label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--theme-color-low-opacity);
+  z-index: 10000;
+  color: #fafafa;
+  transition: background-color 0.2s ease-in-out;
+  border-radius: 100px;
+  margin-bottom: 0;
+}
+
+.profile-pic span {
+  display: inline-flex;
+  padding: 0.2em;
+  height: 2em;
+}
+
+/*
+
+==================================
+==================================
+    profile.html
+    #profile
+==================================
+==================================
+
+*/
+
+#profile .container {
+  padding: 2rem 0;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+}
+
+@media (max-width: 992px) {
+  #profile .container {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 768px) {
+  #profile .container {
+    grid-template-columns: 1fr;
+  }
 }
